[gd_scene format=4]

[ext_resource path="res://components/portraits/character_creator.gd" type="Script" id=1]
[ext_resource path="res://components/portraits/portrait_view.tscn" type="PackedScene" id=2]

[node name="CharacterCreator" type="Control"]
script = ExtResource(1)

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NameRow" type="HBoxContainer" parent="VBox"]

[node name="Label" type="Label" parent="VBox/NameRow"]
text = "Name"

[node name="LineEdit" type="LineEdit" parent="VBox/NameRow"]
size_flags_horizontal = 3

[node name="PortraitView" parent="VBox" instance=ExtResource(2)]

[node name="LayerControls" type="VBoxContainer" parent="VBox"]

[node name="ButtonRow" type="HBoxContainer" parent="VBox"]

[node name="Randomize" type="Button" parent="VBox/ButtonRow"]
text = "Randomize"

[node name="SeedFromName" type="Button" parent="VBox/ButtonRow"]
text = "Seed From Name"

[node name="Save" type="Button" parent="VBox/ButtonRow"]
text = "Save / Export"

[node name="Apply" type="Button" parent="VBox/ButtonRow"]
text = "Apply"
